--- a/index.html
+++ b/index.html
@@ -1487,7 +1487,7 @@
                 <div class="resource-category">
                     <h2 class="category-title">📺 YouTube Kanalları</h2>
                     <div class="resources-grid">
-                        <a href="https://www.youtube.com/@TonguçAkademi" target="_blank" class="resource-card">
+                        <a href="https://www.youtube.com/@tongucakademi" target="_blank" class="resource-card">
                             <div class="resource-icon">🎓</div>
                             <h3 class="resource-name">Tonguç Akademi</h3>
                             <p class="resource-desc">10. sınıf matematik dersleri ve soru çözümleri</p>
@@ -1497,25 +1497,20 @@
                             <h3 class="resource-name">Khan Academy Türkçe</h3>
                             <p class="resource-desc">Ücretsiz, kapsamlı matematik eğitimi</p>
                         </a>
-                        <a href="https://www.youtube.com/@MatematikKafe" target="_blank" class="resource-card">
-                            <div class="resource-icon">☕</div>
-                            <h3 class="resource-name">Matematik Kafe</h3>
-                            <p class="resource-desc">Trigonometri ve geometri konuları</p>
-                        </a>
-                        <a href="https://www.youtube.com/@UnicornAkademi" target="_blank" class="resource-card">
-                            <div class="resource-icon">🦄</div>
-                            <h3 class="resource-name">Unicorn Akademi</h3>
-                            <p class="resource-desc">Lise matematik dersleri ve sınav hazırlık</p>
+                        <a href="https://www.youtube.com/@MatematikOgretmeniTR" target="_blank" class="resource-card">
+                            <div class="resource-icon">👨‍🏫</div>
+                            <h3 class="resource-name">Matematik Öğretmeni</h3>
+                            <p class="resource-desc">Konu anlatımları ve soru çözümleri</p>
                         </a>
                         <a href="https://www.youtube.com/@AytMatematik" target="_blank" class="resource-card">
                             <div class="resource-icon">🎯</div>
-                            <h3 class="resource-name">AYT Matematik</h3>
-                            <p class="resource-desc">AYT matematik soru çözümleri</p>
+                            <h3 class="resource-name">Hocalara Geldik</h3>
+                            <p class="resource-desc">AYT matematik ve TYT soru çözümleri</p>
                         </a>
-                        <a href="https://www.youtube.com/@MatematikOgretmeni" target="_blank" class="resource-card">
-                            <div class="resource-icon">👨‍🏫</div>
-                            <h3 class="resource-name">Matematik Öğretmeni</h3>
-                            <p class="resource-desc">Konu anlatımları ve pratik çözümler</p>
+                        <a href="https://www.youtube.com/@BilimAkademi" target="_blank" class="resource-card">
+                            <div class="resource-icon">🧪</div>
+                            <h3 class="resource-name">Bilim Akademi</h3>
+                            <p class="resource-desc">Matematik konu anlatımları ve testler</p>
                         </a>
                     </div>
                 </div>
